Fixed filter nav alignment

--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,8 @@ body {
   display: inline-block;
   position: relative;
   padding-right: 10px;
+  margin-bottom: 10px;
+  margin-top: auto;
 }
 
 .filtered-item a {
